# mcp-wise

./: .env.example  .gitignore  .mcp.json.http  .mcp.json.stdio  Dockerfile  README.md  pyproject.toml  wise-recipient-api-summary.md
.claude/: settings.json
.github/workflows/: docker-publish.yml
docs/features/: wise-mcp.md
docs/wise_api/: wise-recipient-api-python-implementation.md
src/: main.py
src/wise_mcp/: __init__.py  app.py  main.py
src/wise_mcp/api/: __init__.py  wise_client.py  wise_client_helper.py
src/wise_mcp/api/types/: __init__.py  profile.py  recipient.py  transfer.py
src/wise_mcp/resources/: __init__.py  recipients.py  send_money.py
src/wise_mcp/utils/: string_utils.py
