[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wise-mcp"
version = "0.1.0"
description = "MCP gateway for the Wise API"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=2.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wise_mcp"]
